--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 click==7.1.2
 cvxpy==1.1.7
 cycler==0.10.0
+cmake==3.27.0
 Django==3.1.7
 ecos==2.0.7.post1
 Flask==1.1.2
@@ -12,12 +13,12 @@ kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
 maxrect==0.0.1.dev0
-numpy==1.21.6
+numpy==1.25.1
 osqp==0.6.1
-pandas==1.3.5
+pandas==2.0.3
 Pillow==8.0.1
 pyparsing==2.4.7
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 pytz==2020.1
 scipy==1.5.4
 scs==2.1.2
